Fix(Names Strctures to ModifyOrders): Se hizo un cambio de nombre a los puertos, commands y request, esto para aislar con respecto a los proximos casos de uso -> Modificar estado de orden
Antes teniamos puestos, commands y RestDTO llamados '...ModifyOrder...' , ahora son '...ModifyOrderByCustomer...'.

To Do -> Aplicar los proximos casos de uso en los que empleado|admin tengan la capacidad de cambiar el estado de las ordenes, para posterior a eso Notificar al cliente.
-> Aplicar SpringSecurity -> CORS&&JWT

-> Revisar Arch

--- a/Backend/src/bootstrap/bin/main/templates/email/orderDetail.html
+++ b/Backend/src/bootstrap/bin/main/templates/email/orderDetail.html
@@ -5,9 +5,9 @@
  - orderDateTime
  - products{ .name & .price}
  - subtotal
- - discount
- - shiping
- - taxes
+ - discount - Optional
+ - shiping - Optional
+ - taxes - Optional
  - total
 -->
 
@@ -149,7 +149,7 @@
                                         <p style="margin: 0; color: #28a745; font-size: 14px;" th:text="'-$' + ${#numbers.formatDecimal(discount, 1, 2)}">-$0.00</p>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr th:if="${shipping>0}">
                                     <td style="padding: 8px 0;">
                                         <p style="margin: 0; color: #6c757d; font-size: 14px;">Envío</p>
                                     </td>
@@ -157,7 +157,7 @@
                                         <p style="margin: 0; color: #333; font-size: 14px;" th:text="${shipping == 0} ? 'GRATIS' : '$' + ${#numbers.formatDecimal(shipping, 1, 2)}">$0.00</p>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr th:if="${taxes>0}">
                                     <td style="padding: 8px 0;">
                                         <p style="margin: 0; color: #6c757d; font-size: 14px;">Impuestos (IVA)</p>
                                     </td>
